--- a/jpa-intro/pom.xml
+++ b/jpa-intro/pom.xml
@@ -4,6 +4,18 @@
 	<artifactId>jpa-initial-tests</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.hibernate</groupId>
